fix: custome event title + subtitle alignment

--- a/blocks/events/__section-subtitle/events__section-subtitle.css
+++ b/blocks/events/__section-subtitle/events__section-subtitle.css
@@ -1,3 +1,4 @@
 .events__section-subtitle {
-    margin-bottom: 30px;
+  margin-bottom: 30px !important;
+  text-align: left !important;
 }
