--- a/blocks/events/__section-title/events__section-title.css
+++ b/blocks/events/__section-title/events__section-title.css
@@ -1,3 +1,3 @@
 .events__section-title {
-  text-align: left;
+  text-align: left !important;
 }
